2009-02-01  Alexis Sukrieh  <sukria@backup-manager.org>
	* Release 0.7.8
	* Tempfiles are correctly created/purged in backup-manager-upload
	  (thanks to Josh Triplett and Thomas Parmelan).


2008-10-24	Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager-upload (closes bug #199)
	  correctly report error when FTP uploads fail 
	  (thanks to Henning Bitsch for the report and Thomas Parmelan for the
	  patch)
	* doc/user-guide.sgml (closes bug #200)
	  Fixed the example for BM_ARCHIVE_NICELEVEL
	  (thanks to Rafa G. for the report)
	* backup-manager-upload (closes bug #196)
	  Fix in the get_ssh_opts function so we correctly retreive SSH/SCP
	  switches.
	* backup-manager-upload (closes bug #195)
	  Don't set a port switch to ssh/scp commands if BM_UPLOAD_SSH_PORT is not
	  set. Thanks to Andy Shinn for the report and the diagnostic.
	* lib/backup-methods.sh (closes #194)
	  Change permission whenever an archive is made, ether if it's correctly
	  built or not.
	  Thansk to Philippe Villiers for the report.
	* lib/backup-methods.sh (closes bug #178)
	  Don't try to build empty archives for targets found in
	  BM_TARBALL_BLACKLIST.
	  Thanks to Henning Bitsch for the report.

2007-08-30	Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/files.sh
	  Process symlinks as well for building the purging list.

2007-05-30  Alexis Sukrieh  <sukria@backup-manager.org>

	* Makefile, doc/Makefile
	  + Adding $(DESTDIR) where needed.
	  + Better call to pod2man: --section 8
	  + Fixes in doc/Makefile 

2007-05-29  Alexis Sukrieh  <sukria@backup-manager.org>

	* Fixed a typo in the user-guide (bug #167).

2007-05-29  Alexis Sukrieh <sukria@sukria.net>

	* Makefile
	  Adding the missing lib/dbus.sh line

2007-05-27  Rached Ben Mustapha  <rached@benmur.net>

	* lib/dbus.sh
	  + New module to signal state of backup-manager to listeners on D-BUS
	* lib/backup-methods.sh, lib/logger.sh, backup-manager
	  + Use progress reporting and logging facilities from lib/dbus.sh